Added even struct. Fixed placeholder hashing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ thiserror = "2"
 chrono = { version = "0.4", features = ["serde"] }
 base64 = "0.22"
 rand = "0.8"
+hkdf = "0.12"
+sha2 = "0.10"
 anyhow = "1"
 tempfile = "3"
 
