Finish up MVP for moat-core

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ rust-version = "1.75"
 openmls = "0.6"
 openmls_rust_crypto = "0.3"
 openmls_basic_credential = "0.3"
+openmls_traits = "0.3"
 
 # ATProto
 atrium-api = "0.24"
