--- a/crates/moat-core/Cargo.toml
+++ b/crates/moat-core/Cargo.toml
@@ -10,6 +10,7 @@ description = "Pure MLS logic for Moat encrypted messenger"
 openmls = { workspace = true }
 openmls_rust_crypto = { workspace = true }
 openmls_basic_credential = { workspace = true }
+openmls_traits = { workspace = true }
 thiserror = { workspace = true }
 rand = { workspace = true }
 hkdf = { workspace = true }
