--- a/crates/moat-cli/Cargo.toml
+++ b/crates/moat-cli/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
 anyhow = { workspace = true }
+clap = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
