Added stealth addresses for invites

--- a/crates/moat-cli/Cargo.toml
+++ b/crates/moat-cli/Cargo.toml
@@ -23,6 +23,7 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
+rand = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
