--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,8 @@ base64 = "0.22"
 rand = "0.8"
 hkdf = "0.12"
 sha2 = "0.10"
+x25519-dalek = { version = "2", features = ["static_secrets"] }
+chacha20poly1305 = "0.10"
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 tempfile = "3"
