--- a/crates/moat-core/Cargo.toml
+++ b/crates/moat-core/Cargo.toml
@@ -17,6 +17,8 @@ hkdf = { workspace = true }
 sha2 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+x25519-dalek = { workspace = true }
+chacha20poly1305 = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
