Solved bugs with http timeout and pds resolution.

--- a/crates/moat-atproto/Cargo.toml
+++ b/crates/moat-atproto/Cargo.toml
@@ -16,3 +16,4 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 base64 = { workspace = true }
 ipld-core = "0.4"
+reqwest = { version = "0.12", features = ["json"] }
