Multi-device now works for reading messages

--- a/crates/moat-cli/Cargo.toml
+++ b/crates/moat-cli/Cargo.toml
@@ -24,6 +24,8 @@ chrono = { workspace = true }
 anyhow = { workspace = true }
 clap = { workspace = true }
 rand = { workspace = true }
+sha2 = { workspace = true }
+hex = "0.4"
 hostname = "0.4"
 
 [dev-dependencies]
