--- a/moat-flutter/macos/Runner/Configs/AppInfo.xcconfig
+++ b/moat-flutter/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = moat_flutter
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.moatFlutter
+PRODUCT_BUNDLE_IDENTIFIER = social.moat.app
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2026 moat.social. All rights reserved.
