Fix so emoji reactions show.

--- a/moat-flutter/pubspec.yaml
+++ b/moat-flutter/pubspec.yaml
@@ -91,16 +91,19 @@ flutter:
   # https://flutter.dev/to/asset-from-package
 
   fonts:
-    - family: Roboto
-      fonts:
-        - asset: fonts/Roboto.ttf
-        - asset: fonts/Roboto-Italic.ttf
-          style: italic
     - family: Platypi
       fonts:
         - asset: fonts/Platypi.ttf
         - asset: fonts/Platypi-Italic.ttf
           style: italic
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto.ttf
+        - asset: fonts/Roboto-Italic.ttf
+          style: italic
+    - family: NotoColorEmoji
+      fonts:
+        - asset: fonts/NotoColorEmoji.ttf
 
 flutter_native_splash:
   color: "#1B1B1B"
