--- a/moat-flutter/rust/Cargo.toml
+++ b/moat-flutter/rust/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "staticlib"]
 [dependencies]
 flutter_rust_bridge = "=2.11.1"
 moat-core = { path = "../../crates/moat-core" }
+serde_json = "1"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 moat-core = { path = "../../crates/moat-core", features = ["js"] }
