Fix own drawbridge log in signing

--- a/crates/moat-core/Cargo.toml
+++ b/crates/moat-core/Cargo.toml
@@ -13,6 +13,7 @@ openmls_basic_credential = { workspace = true }
 openmls_traits = { workspace = true }
 thiserror = { workspace = true }
 rand = { workspace = true }
+ed25519-dalek = { version = "2", features = ["rand_core"] }
 hkdf = { workspace = true }
 sha2 = { workspace = true }
 serde = { workspace = true }
